fix: adjust font size of habit group summary label for better readability

--- a/plugin/styles.css
+++ b/plugin/styles.css
@@ -215,7 +215,7 @@
 .dv-habit-group-summary-label {
   grid-area: aggregate;
   align-self: center;
-  font-size: 2.5em;
+  font-size: 2.3em;
   line-height: 0.8;
   font-weight: 700;
   color: var(--emerald);
